--- a/Styles/products.css
+++ b/Styles/products.css
@@ -1,5 +1,11 @@
+.container {
+    overflow-y: hidden;
+    overflow-x: auto;
+}
+
 .container table {
     width: 100%;
+    overflow-x: auto;
 }
 
 .container tr {
